assignments/07-csv/1IQE7
  File "./blastomatic.py", line 105
    if out_file:
    ^
IndentationError: unexpected indent
